--- a/templates/_template.html.twig
+++ b/templates/_template.html.twig
@@ -1,5 +1,9 @@
 {% extends "base.html.twig" %}
 
+{% block stylesheets %}
+	{{ encore_entry_link_tags('app') }}
+{% endblock %}
+
 {% block navbar %}
 	{# Navigation Menu  #}
 	<nav class="navbar navbar-expand-lg navbar-light">
@@ -26,33 +30,52 @@
 				<li class="nav-item">
 					<a class="nav-link" href="#">Support</a>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">My Account</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Sign Up</a>
-				</li>
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						Sign In
-					</a>
-					<form id="login" class="dropdown-menu px-2 pt-2 pb-3" aria-labelledby="navbarDropdown">
-						<div class="m-1">
-							<label for="emailLogin">
-								Email :
-							</label>
-							<input type="email" name="email" id="emailLogin" class="form-control" size="30">
-						</div>
-						<div class="m-1">
-							<label for="passwordLogin">Password :
-							</label>
-							<input type="password" name="password" id="passowrdLogin" class="form-control" size="30">
-						</div>
-						<button type="submit" class="btn ml-1 mt-1" href="#">Sign In</button>
-					</form>
-				</li>
+				{% if not app.user %}
+					<li class="nav-item">
+						<a class="nav-link" href="#">Sign Up</a>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							Sign In
+						</a>
+						<form id="login" class="dropdown-menu px-2 pt-2 pb-3" aria-labelledby="navbarDropdown" method="POST">
+							{% if login_error() %}
+								<div class="alert alert-danger">{{ login_error().messageKey|trans(login_error().messageData, 'security') }}</div>
+							{% endif %}
+							<div class="m-1">
+								<label for="emailLogin">
+									Email :
+								</label>
+								<input type="email" name="loginEmail" id="emailLogin" class="form-control" size="30" value={{ login_username() }}>
+							</div>
+							<div class="m-1">
+								<label for="passwordLogin">Password :
+								</label>
+								<input type="password" name="loginPassword" id="passowrdLogin" class="form-control" size="30">
+							</div>
+							<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+							<button type="submit" class="btn ml-1 mt-1" href="#">Sign In</button>
+						</form>
+					</li>
+				{% endif %}
 			</ul>
+			{% if app.user %}
+				<div class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="accountDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						👤
+						{{ app.user.firstName }}
+						{{ app.user.lastName }}
+					</a>
+					<div id="accountMenu" class="dropdown-menu" aria-labelledby="accountDropdown">
+						<a class="dropdown-item" href="#">Profile</a>
+						<a class="dropdown-item" href="#">Bookmarks</a>
+						<a class="dropdown-item" href="#">Booking</a>
+						<div class="dropdown-divider"></div>
+						<a class="dropdown-item" href="{{ path('app_logout') }}">Sign out</a>
+					</div>
 
+				</div>
+			{% endif %}
 		</div>
 	</nav>
 {% endblock %}
@@ -69,4 +92,8 @@
 		</div>
 		<button class="btn mx-2" type="submit">Search</button>
 	</form>
+{% endblock %}
+
+{% block javascripts %}
+	{{ encore_entry_script_tags('app') }}
 {% endblock %}
