:hammer: Add API for SearchBar + work on Homepage
ApiController and app.js use React to make the SearchBar dynamic. Homepage now displays Promotions and Travels.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -162,6 +162,22 @@ header{
         }
     }
 
+    #suggestionList{
+        position: absolute;
+        top: 440px;
+        left: 30px;
+        z-index: 200;
+
+        color: $dark-blue;
+
+        a {
+            &:hover{
+                text-decoration: none;
+                background-color: $light-blue;
+            }
+        }
+    }
+
     #accountMenu {
         @include buttonShader($light-blue, $dark-blue, 0);
         a.dropdown-item {
