--- a/templates/_template.html.twig
+++ b/templates/_template.html.twig
@@ -87,7 +87,7 @@
 			<input class="form-control pl-4" type="search" placeholder="Destination" aria-label="Search">
 			<div class="input-group-append">
 				<input type="date" class="btn" name="date_departure" id="date_departure">
-				<input type="date" class="btn" name="date_returning" id="date_returning">
+				<input type="date" class="btn" name="date_return" id="date_return">
 			</div>
 		</div>
 		<button class="btn mx-2" type="submit">Search</button>
