:heavy_plus_sign: Add Promotion and Travel pages
Add Promotion and Travel controllers with their first version in comments. Next version will remove these comments.

--- a/templates/_template.html.twig
+++ b/templates/_template.html.twig
@@ -18,14 +18,14 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item">
-					<a class="" href="#"><img src="https://via.placeholder.com/40/54718E/DEE8EE?text=Logo" alt="Logo">
+					<a class="nav-item" href="{{ path('homepage') }}"><img src="https://via.placeholder.com/40/54718E/DEE8EE?text=Logo" alt="Logo">
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#specialDeals">Special Deals</a>
+					<a class="nav-link" href="{{ path('promotions') }}">Special Deals</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#travelList">Travel List</a>
+					<a class="nav-link" href="{{ path('travels') }}">Travel List</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">Support</a>
