--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -82,6 +82,25 @@ body{
     }
 }
 
+
+a{
+    color: inherit;
+    text-decoration: none;
+
+    &:hover{
+        color: inherit;
+        text-decoration: underline dotted;
+
+        &.no-underline{
+            text-decoration: none;
+        }
+    }
+    &:visited{
+        color: inherit;
+        text-decoration: none;
+    }   
+}
+
 header{
     background-image:   linear-gradient(to top right, rgba($dark-blue, 0.5), rgba(lighten($dark-blue, 20%), 0.7)), 
                         url("../img/bg-galaxy-1060.jpg");
@@ -228,6 +247,7 @@ main{
         @include buttonShader($light-blue, $dark-blue, 0, 1);
         text-shadow: none;
         min-height: 375px;
+        text-decoration: none;
 
         h4{
             font-weight: 700;
@@ -256,18 +276,27 @@ main{
     #newTravel button{
         @include buttonShader($light-blue, $dark-blue);
     }
+
+    ul#pagination li.page-item{
+        color: $dark-blue;
+        &.disabled{
+            color: #888888;
+        }
+        &.active{
+            color:#fbfbfb;
+            background-color: $dark-blue;
+            a, a:hover, a:visited{
+                border-color: $blue;
+            }
+        }
+        a, a:hover, a:visited{
+            color: inherit;
+            background-color: inherit;
+        }
+    }
 }
 
 footer{
     @include buttonShader($light-blue, $dark-blue, 0, 1);
     min-height: 200px;
-}
-
-a, a:hover, a:visited{
-    color: inherit;
-    text-decoration: none;
-
-    &:hover{
-        text-decoration: underline dotted;
-    }
 }
