--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -12,8 +12,6 @@
 	<ul>
 		<li>images src</li>
 		<li>Links to card</li>
-		<li>Pages of results</li>
-		<li>order by</li>
 		<li>Links to complete lists</li>
 	</ul>
 	{% if promotions_list %}
@@ -22,25 +20,27 @@
 			<div class="row row-cols-1 row-cols-md-3">
 				{% for promotion in promotions_list %}
 					<div class="col mb-4">
-						<div class="card">
-							<img src="https://via.placeholder.com/300x150/54718E/DEE8EE?text=Promotion" class="card-img-top" alt="Photo of SuperTravel">
-							<div class="card-body">
-								<h4 class="card-title">{{ promotion.title }}</h4>
-								<p class="card-text">{{ promotion.description|format_text(100)|raw() }}
-								</p>
+						<a class="no-underline" href="{{ path('promotion', {id: promotion.id}) }}">
+							<div class="card">
+								<img src="https://via.placeholder.com/300x150/54718E/DEE8EE?text=Promotion" class="card-img-top" alt="Photo of SuperTravel">
+								<div class="card-body">
+									<h4 class="card-title">{{ promotion.title }}</h4>
+									<p class="card-text">{{ promotion.description|format_text(100)|raw() }}
+									</p>
+								</div>
+								<div class="card-footer">
+									<small class="text-muted">Expires in
+										{{ expires_in(promotion.dateEnd) }}.</small>
+								</div>
 							</div>
-							<div class="card-footer">
-								<small class="text-muted">Expires in
-									{{ expires_in(promotion.dateEnd) }}.</small>
-							</div>
-						</div>
+						</a>
 					</div>
 				{% endfor %}
 
 			</div>
 			<div>
 				{% if see_more_promotions %}
-					<a href="">[See more...]</a>
+					<a href="{{ path('promotions') }}">(See more promotions...)</a>
 				{% endif %}
 			</div>
 		</section>
@@ -54,53 +54,61 @@
 					Price
 				</button>
 				<div class="dropdown-menu">
-					<a href="#travelList" class="dropdown-item">Name</a>
-					<a href="#travelList" class="dropdown-item">Date</a>
-					<a href="#travelList" class="dropdown-item">Price</a>
+					<a href="{{ path('homepage', {page: this_page, order: 'name'}) }}#travelList" class="dropdown-item">Name</a>
+					<a href="{{ path('homepage', {page: this_page, order: 'dateDeparture'}) }}#travelList" class="dropdown-item">Date</a>
+					<a href="{{ path('homepage', {page: this_page, order: 'price'}) }}#travelList" class="dropdown-item">Price</a>
 				</div>
 			</div>
 		</div>
 		<div class="row row-cols-1 row-cols-md-3">
 			{% for travel in travels_list %}
 				<div class="col mb-4">
-					<div class="card">
-						<img src="https://via.placeholder.com/300x150/54718E/DEE8EE?text=Travel" class="card-img-top" alt="Photo of SuperTravel">
-						<div class="card-body">
-							<h4 class="card-title">{{ travel.name }}</h4>
-							<p class="card-text">{{ travel.description|format_text(100)|raw() }}</p>
+					<a class="no-underline" href="{{ path('travel', {id: travel.id}) }}">
+						<div class="card">
+							<img src="https://via.placeholder.com/300x150/54718E/DEE8EE?text=Travel" class="card-img-top" alt="Photo of SuperTravel">
+							<div class="card-body">
+								<h4 class="card-title">{{ travel.name }}</h4>
+								<p class="card-text">{{ travel.description|format_text(100)|raw() }}</p>
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 			{% endfor %}
 		</div>
 		{% if max_pages > 1 %}
 			<ul
-				class="pagination pagination-sm">
-				{# left arrow  #}
+				id="pagination" class="pagination pagination-sm justify-content-center">
+				{# « arrow  #}
 				{% if this_page - 1 < 1 %}
 					{% set page_voulue = 1 %}
 				{% else %}
 					{% set page_voulue = this_page - 1 %}
 				{% endif %}
-				<li {{ this_page == 1 ? 'class="disabled"' }}>
-					<a href="{{ path('routeName', {page: page_voulue}) }}">left</a>
+				<li {{ this_page == 1 ? 'class="page-item disabled"' : 'class="page-item"' }}>
+					<a class="page-link" href="{{ path('homepage', {page: page_voulue}|merge(app.request.query.all)) }}#travelList">«</a>
 				</li>
 
-				{# Render each page number #}
-				{% for i in 1..max_pages %}
-					<li {{ this_page == i ? 'class="active"' }}>
-						<a href="{{ path('routeName', {page: i}) }}">{{ i }}</a>
-					</li>
+				{# Numéros de page du range #}
+				{% for item in range %}
+					{% if item == '...' %}
+						<li class="page-item disabled">
+							<div class="page-link">...</div>
+						</li>
+					{% else %}
+						<li {{ this_page == item ? 'class="page-item active"' : 'class="page-item "'}}>
+							<a class="page-link" href="{{ path('homepage', {page: item}|merge(app.request.query.all)) }}#travelList">{{ item }}</a>
+						</li>
+					{% endif %}
 				{% endfor %}
 
-				{# right arrow #}
+				{# » arrow #}
 				{% if this_page + 1  <= max_pages %}
 					{% set page_voulue2 = this_page + 1 %}
 				{% else %}
 					{% set page_voulue2 = this_page %}
 				{% endif %}
-				<li {{ this_page == max_pages ? 'class="disabled"' }}>
-					<a href="{{ path('routeName', {page: page_voulue2}) }}">right</a>
+				<li {{ this_page == max_pages ? 'class="page-item disabled"' : 'class="page-item"' }}>
+					<a class="page-link" href="{{ path('homepage', {page: page_voulue2}|merge(app.request.query.all)) }}#travelList">»</a>
 				</li>
 			</ul>
 		{% endif %}
