--- a/templates/_template.html.twig
+++ b/templates/_template.html.twig
@@ -32,7 +32,7 @@
 				</li>
 				{% if not app.user %}
 					<li class="nav-item">
-						<a class="nav-link" href="#">Sign Up</a>
+						<a class="nav-link" href="{{ path('app_register') }}">Sign Up</a>
 					</li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -51,7 +51,7 @@
 							<div class="m-1">
 								<label for="passwordLogin">Password :
 								</label>
-								<input type="password" name="loginPassword" id="passowrdLogin" class="form-control" size="30">
+								<input type="password" name="loginPassword" id="passwordLogin" class="form-control" size="30">
 							</div>
 							<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 							<button type="submit" class="btn ml-1 mt-1" href="#">Sign In</button>
