--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -57,6 +57,7 @@
 				</footer>
 			</div>
 		{% endblock %}
+		{{ encore_entry_script_tags('app') }}
 		{% block javascripts %}{% endblock %}
 	</body>
 </html>
