--- a/templates/promotion/promotion.html.twig
+++ b/templates/promotion/promotion.html.twig
@@ -21,13 +21,15 @@
 			<div class="row row-cols-1 row-cols-md-3">
 				{% for travel in travels_list %}
 					<div class="col-4 mb-4">
-						<div class="card">
-							<img src="https://via.placeholder.com/300x150/54718E/DEE8EE?text=Travel" class="card-img-top" alt="Photo of SuperTravel">
-							<div class="card-body">
-								<h4 class="card-title">{{ travel.name }}</h4>
-								<p class="card-text">{{ travel.description|format_text(100)|raw() }}</p>
+						<a class="no-underline" href="{{ path('travel', {id: travel.id}) }}">
+							<div class="card">
+								<img src="https://via.placeholder.com/300x150/54718E/DEE8EE?text=Travel" class="card-img-top" alt="Photo of SuperTravel">
+								<div class="card-body">
+									<h4 class="card-title">{{ travel.name }}</h4>
+									<p class="card-text">{{ travel.description|format_text(100)|raw() }}</p>
+								</div>
 							</div>
-						</div>
+						</a>
 					</div>
 				{% endfor %}
 			</div>
