:hammer: Correct Booking Controller and template

--- a/templates/_template.html.twig
+++ b/templates/_template.html.twig
@@ -67,7 +67,7 @@
 						{{ app.user.lastName }}
 					</a>
 					<div id="accountMenu" class="dropdown-menu" aria-labelledby="accountDropdown">
-						<a class="dropdown-item" href="#">Profile</a>
+						<a class="dropdown-item" href="{{ path('profile') }}">Profile</a>
 						<a class="dropdown-item" href="#">Bookmarks</a>
 						<a class="dropdown-item" href="#">Booking</a>
 						<div class="dropdown-divider"></div>
