--- a/templates/booking/payment.html.twig
+++ b/templates/booking/payment.html.twig
@@ -24,27 +24,7 @@
 		{{ (unit_price * booking.numberPlaces / 100)|format_currency('USD') }}
 	</p>
 	<h2>Payment</h2>
-	<form class="container">
-		<div class="form-row">
-			<div class="form-group col-6">
-				<label for="savedPayments">Saved payment details for
-					{{ (app.user.firstName ~ ' ' ~ app.user.lastName) }}</label>
-				<select name="savedPaymentsSelection" id="savedPayments" class="form-control">
-					<option value="-1">New</option>
-					{% for savedPayment in app.user.savedPayments %}
-						<option value={{ savedPayment.id }}>{{ savedPayment.name }}</option>
-					{% endfor %}
-				</select>
-				<div id="savedPaymentsError"></div>
-			</div>
-			<div class="form-group col-3">
-				<img src="https://via.placeholder.com/60x60/FFFFFF/888888?text=…" alt="loading icon" id="loadingIcon" class="d-none">
-				<label>&nbsp;</label><br>
-				<button id="loadPayment" type="button" class="d-none">Load</button>
-			</div>
-		</div>
-	</form>
-	<ul></ul>
+	{% include "booking/savedpayment.html.twig" %}
 
 	{{ form_start(paymentForm, {attr: {class: 'container'}}) }}
 	<fieldset class="show">
