:sparkles: Add Bookmarks management

--- a/templates/_template.html.twig
+++ b/templates/_template.html.twig
@@ -69,7 +69,7 @@
 					<div id="accountMenu" class="dropdown-menu" aria-labelledby="accountDropdown">
 						<a class="dropdown-item" href="{{ path('profile') }}">Profile</a>
 						<a class="dropdown-item" href="#">Bookmarks</a>
-						<a class="dropdown-item" href="#">Booking</a>
+						<a class="dropdown-item" href="{{ path('bookings') }}">Bookings</a>
 						<div class="dropdown-divider"></div>
 						<a class="dropdown-item" href="{{ path('app_logout') }}">Sign out</a>
 					</div>
