:sparkles: Add backoffice pages to manage Travel To Add/Modify Travels (with Itinerary) and TravelDates

--- a/templates/backoffice/index.html.twig
+++ b/templates/backoffice/index.html.twig
@@ -9,6 +9,7 @@
 	<ul>
 		<li><a href="">Manage Promotions</a></li>
 		<li><a href="/backoffice/travels">Manage Travels</a></li>
+		<li><a href="/backoffice/add_travel">Add Travel</a></li>
 		<li><a href="">Support</a></li>
 		<li><a href="">Manage Users</a></li>
 	</ul>
