--- a/templates/profile/profile.html.twig
+++ b/templates/profile/profile.html.twig
@@ -34,8 +34,8 @@
 					{% for booking in booked_list %}
 						<tr>
 							<td>{{ booking.travelDate.travel.name }}</td>
-							<td>{{ booking.travelDate.dateDeparture|date('Y-m-d h:i') }}</td>
-							<td>{{ booking.travelDate.dateReturn|date('Y-m-d h:i') }}</td>
+							<td>{{ booking.travelDate.dateDeparture|date('Y-m-d H:i') }}</td>
+							<td>{{ booking.travelDate.dateReturn|date('Y-m-d H:i') }}</td>
 							<td>{{ booking.numberPlaces }}</td>
 							<td>{{ (booking.paidAmount / 100)|format_currency('USD') }}</td>
 						</tr>
@@ -60,8 +60,8 @@
 					{% for pbooking in pending_list %}
 						<tr>
 							<td>{{ pbooking.travelDate.travel.name }}</td>
-							<td>{{ pbooking.travelDate.dateDeparture|date('Y-m-d h:i') }}</td>
-							<td>{{ pbooking.travelDate.dateReturn|date('Y-m-d h:i') }}</td>
+							<td>{{ pbooking.travelDate.dateDeparture|date('Y-m-d H:i') }}</td>
+							<td>{{ pbooking.travelDate.dateReturn|date('Y-m-d H:i') }}</td>
 							<td>{{ pbooking.numberPlaces }}</td>
 							<td>
 								{% if (pbooking.travelDate.travel.maxPlaces - booked[pbooking.travelDate.id]) > 0 %}
